# controls_stack

./: CMakeLists.txt  GlobalPlanner.h  Makefile  README.md  coins_lab_a_star.cpp  coins_lab_a_star.h  dstarlite.cpp  dstarlite.h  dstarlite.py  globals.h  goat  goat.xml  listener.cpp  main.cpp  node.cpp  node.h  package.xml  pothole.dae  rpastar.cpp  rpastar.h  startup_plugin.xml
Gazebo Models/: 10mTape.dae  ramp.dae
Gazebo Models/10mTape/: model.config  model.sdf
Gazebo Models/140mTape/: 140mTape.dae  model.sdf
Gazebo Models/2mTape/: 2mTape.dae
Gazebo Models/Retired Model Files/: rampConfigFile.txt  rampDaeFile.txt  rampSdfFile.txt
Gazebo Models/pothole/: model.config
Gazebo Models/ramp/: README.txt  model.config  model.sdf
Gazebo Models/rampBiger/: model.config  model.sdf
Gazebo Models/ramp_size/: model.config  model.sdf  ramp_size.dae
Gazebo Worlds/: finalWorld.sdf  finalWorldPotholes.sdf  finalWorldWithObstacles.sdf  igvcWorld.sdf  useful.sdf
cartographer_files/: install_proto3_fixed.sh
include/: global_planner.h  rpastar.h
launch/: mybot_world.launch  startup.launch
motor_cmds/: motor_cmds.cpp
params/: base_local_planner_params.yaml  cartographer.launch  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.launch
robots/: goat.gazebo  goat.urdf  goat.urdf.xacro
simulationModel/: README.md  package.xml
simulationModel/Gazebo Models/140mTape/: model.config
simulationModel/Gazebo Models/2mTape/: model.config  model.sdf
simulationModel/Gazebo Models/myWhiteTape/: model.config  model.sdf
simulationModel/Gazebo Models/pothole/: model.sdf
simulationModel/Gazebo Models/ramp/: model.sdf  ramp.dae
simulationModel/Gazebo Models/redCube/: model.config  model.sdf  redCube.dae
simulationModel/Gazebo Models/terrain/: model.config
simulationModel/Gazebo Models/tree/: model.config
simulationModel/Gazebo Worlds/: lightWorld.sdf  testWorld.sdf
simulationModel/robots/: goat.urdf.xacro
src/: constants.h  given_coords.txt  given_cords.txt  global_planner.cpp  global_planner.h  global_static_planner.cpp  global_static_planner.h  goal_pub.cpp  gps_listener.cpp  listener.cpp  live_share.txt  rpastar.cpp  rpastar.h  servicemsg.srv  talker.cpp
srv/: servicemsg.srv
world/: simulationWorld.sdf
(+5 files in other folders)
